force-app/main/default/objects/Activity__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sightseeing</fullName>
            </value>
            <value>
                <fullName>History &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Food &amp; Drink</fullName>
            </value>
            <value>
                <fullName>Outdoor &amp; Adventure</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Nightlife</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>