force-app/main/default/objects/Activity__c/fields/Listing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Listing_Summary__c</fullName>
    <label>Listing Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>