force-app/main/default/objects/Activity__c/fields/Meeting_Point__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Point__c</fullName>
    <label>Meeting Point</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>