force-app/main/default/objects/Activity__c/fields/Supplier_Notes__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Notes__c</fullName>
    <label>Supplier Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>